# fall_n

./: .gitignore  .gitmodules  AUDITORIA_EJECUCION.md  AUDITORIA_PUBLICACION.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  UML_diagram  build_log.txt  build_out.txt  build_stdout.txt  fall_n  header_files.h  header_files.hh  ko_bathe_3d_uniaxial_fc21.csv  ko_bathe_3d_uniaxial_fc30.csv  lsan.dev.supp  lsan.strict.supp  lsan.strict_plus.supp  lsan.supp  main.aux  main.cpp  main.fdb_latexmk  main.fls  main_ca_fe2_tuner.cpp  main_elastic_fe2_smoke.cpp  main_fe2_column_cyclic_one_way.cpp  main_fe2_column_cyclic_two_way.cpp  main_local_site_batch.cpp  main_lshaped_multiscale.cpp  main_lshaped_multiscale_16storey.cpp  main_lshaped_multiscale_16storey_staging.cpp  main_lshaped_rc.cpp  main_managed_xfem_site_replay.cpp  main_multiscale.cpp  main_multiscale_one_way_replay.cpp  main_multiscale_seismic.cpp  main_rc_beam_validation.cpp  (+34 more)
.github/workflows/: multiscale-stability.yml
build_stage3_validation/: .ninja_deps  .ninja_log  build.ninja
build_stage4_validation/: .ninja_deps  .ninja_log  baseline_api_smoke.cpp  build.ninja  syntax_prelude.hpp
build_stage5_pch/: .ninja_deps  .ninja_log  build.ninja  nlsub_0_step_000000_mesh.vtu
build_stage5_pch_diag/: .ninja_deps  .ninja_log  build.ninja
build_stage6_validation/: .ninja_deps  .ninja_log  build.ninja
build_stage7_validation/: .ninja_deps  .ninja_log  build.ninja
build_stage8_validation/: .ninja_deps  .ninja_log  build.ninja
build_validation/: .ninja_deps  .ninja_log  build.ninja
data/input/: Ibeam_default.geo  Ibeam_default.msh  box.geo  box.geo.opt  box.msh  cube.geo
doc/: .gitignore  ch01_simplex_elements.tex  ch02_quadrature.tex  ch03_negative_weights.tex  ch04_projection.tex  ch05_petsc_patch.tex  ch06_implementation.tex  ch07_architecture.tex  ch08_boundary_conditions.tex  ch09_element_geometry_refactor.tex  ch100_deflated_continuation.tex  ch101_energy_tao_continuation.tex  ch102_cultural_algorithm_module.tex  ch103_ca_tuner_solver.tex  ch104_extension_architecture.tex  ch105_driver_integration.tex  ch106_energy_linesearch_and_fe2.tex  ch107_kinematic_regularization.tex  ch108_theoretical_compendium.tex  ch109_cultural_program.tex  ch10_serendipity_elements.tex  ch11_domain_ontology.tex  ch12_domain_vertex_transition.tex  ch13_element_geometry_binding.tex  ch14_low_level_access.tex  ch15_spatial_sites_and_lazy_domain.tex  ch16_adaptive_projection.tex  ch17_patch_recovery.tex  ch19_vtk_tensor_filters.tex  ch20_vtk_cleanup.tex  ch21_structural_scale_reconstruction.tex  ch22_mixed_structural_table_example.tex  ch23_dmplex_mixed_topology.tex  ch24_regular_5story_building_example.tex  ch25_rc_nonlinear_building_example.tex  ch26_material_module_analysis.tex  ch27_material_semantic_cleanup.tex  ch28_constitutive_state_storage.tex  ch29_constitutive_state_object.tex  ch30_constitutive_integrator_split.tex  (+74 more)
doc/ref/: Ko_Bathe-2026.extracted.txt  ko_bathe_text.txt
docs/: DOCUMENTATION_STRATEGY.md  kobathe_env_vars.md
mesh/: node.h
python_tests/: Q4_Lagrangian_Stiffness.ipynb
scripts/: audit_legacy_quarantine.py  audit_lshaped_16storey_element_force_conventions.py  audit_lshaped_16storey_falln_modal.py  audit_lshaped_16storey_global_response_matrix.py  audit_lshaped_16storey_mass_modal_matrix.py  audit_lshaped_16storey_structural_nonlinear_parity.py  audit_moment_curvature_closure_matrix.py  audit_opensees_force_based_control_sweep.py  audit_publication_vtk.py  audit_reduced_rc_section_fiber_observables.py  audit_xfem_mixed_arc_length_regression.py  build_cyclic_publication_inventory.py  ca_night_orchestrator.sh  ci_multiscale_stabilization.ps1  cleanup_validation_artifacts.py  compare_fe2_local_transition_policy.py  compare_kobathe_eta_probes.py  compare_lshaped_one_way_macro_invariance.py  evaluate_xfem_corotational_gate.py  evaluate_xfem_finite_kinematics_gate.py  falln_postprocess.py  fase3_5_empirical_residuals_and_nz_convergence.py  fase5_36cell_matrix_sweep.py  generate_test_data.py  kobathe_arclen_test.sh  kobathe_ca_tuner.sh  kobathe_ladder.sh  kobathe_lmnewton_cyclic.sh  kobathe_probe_gates.py  kobathe_probe_pair.sh  opensees_lshaped_16storey_global_reference.py  opensees_reduced_rc_column_continuum_reference.py  opensees_reduced_rc_column_hifi_reference.py  opensees_reduced_rc_column_hifi_teaching.py  opensees_reduced_rc_column_reference.py  opensees_reduced_rc_material_reference.py  plot_branch_selection_hysteresis.py  plot_branch_selection_hysteresis_round2.py  plot_ca_convergence.py  plot_ca_convergence_tesis.py  (+131 more)
src/: fall_n_common_pch.hh
src/analysis/: Analysis.hh  AnalysisDirector.hh  AnalysisObserver.hh  AnalysisRouteAudit.hh  AnalysisRouteCatalog.hh  ArcLengthSolver.hh  BeamMacroBridge.hh  BorderedMixedControlNewton.hh  DamageCriterion.hh  (+38 more)
tests/: baseline_v2_after_fixes.txt  baseline_v2_build.txt  baseline_v2_labels.txt  baseline_v2_long_studies.txt  baseline_v2_results.txt  baseline_v2_summary.md  baseline_v2_test_inventory.txt  baseline_v2_test_list.txt  baseline_v2_test_targets.txt  diag_t39_run.txt  diag_t76.txt  diag_t76_build.txt  diag_t80.txt  diag_t80_run.txt  diag_t80_run2.txt  fase7_chain_cross_formulation.txt  fase7_validation_reboot_fast.txt  stageAB_unit.txt  test_affine_section_subscale_model.cpp  test_algorithms_cultural_algorithm.cpp  test_analysis_director.cpp  test_assembly_policy.cpp  test_beam_axis_quadrature.cpp  test_beam_element.cpp  test_benchmark.cpp  test_bordered_mixed_control_newton.cpp  test_boundary_conditions.cpp  test_case5_frontier_probe.cpp  test_componentwise_kent_park_concrete_3d.cpp  test_computational_claim_trace_catalog.cpp  test_computational_validation_readiness_catalog.cpp  test_computational_variational_slice_catalog.cpp  test_condensation.cpp  test_constitutive_commit_chain.cpp  test_continuum_constitutive_interface.cpp  test_continuum_local_problem.cpp  test_continuum_tensors.cpp  test_coupling_residual_benchmark.cpp  test_crack_shear_transfer_law.cpp  test_cyclic_crack_band_concrete_3d.cpp  (+132 more)
tools/: kobathe_single_gp_probe.cpp
(+578 files in other folders)
